--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.18",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
-    "next": "15.0.3",
     "next-s3-upload": "^0.3.4",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
