--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.18",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "next": "14.2.18",
+    "next-plausible": "^3.12.4",
     "next-s3-upload": "^0.3.4",
+    "react": "^18",
+    "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
