--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "clsx": "^2.1.1",
     "next": "14.2.18",
     "next-plausible": "^3.12.4",
