--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.4",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-scroll-area": "^1.2.1",
+    "ai": "^4.0.3",
     "clsx": "^2.1.1",
     "next": "14.2.18",
     "next-plausible": "^3.12.4",
