--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.0.4",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "ai": "^4.0.3",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "next-plausible": "^3.12.4",
     "next-s3-upload": "^0.3.4",
