--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "menu-visualizer",
-  "version": "0.1.0",
+  "name": "meeting-notes-assistant",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.4",
-    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -20,17 +19,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
-    "next-plausible": "^3.12.4",
-    "next-s3-upload": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
-    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
-    "together": "^0.0.11",
-    "together-ai": "^0.9.0",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
