--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-plausible": "^3.12.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
