--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@ai-sdk/openai": "^1.0.4",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "ai": "^4.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-plausible": "^3.12.4",
@@ -27,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
