--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
-    "next-plausible": "^3.12.4",
+    "next-umami": "^0.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
